log
Fri 17 May 2024 10:49:23 PM UTC: 
 tests:  0|5
total_score: 0/70
9adccef
Fri 17 May 2024 11:34:57 PM UTC: 
 sudoku.c | 18 +++++++++++++++++-
 1 file changed, 17 insertions(+), 1 deletion(-)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:66:10: error: expected expression before ‘}’ token
   66 |          }
      |          ^
Compilation failed
ad81ba6
Fri 17 May 2024 11:35:54 PM UTC: 
 sudoku.c | 3 +++
 1 file changed, 3 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:67:22: error: unused variable ‘adyacente’ [-Werror=unused-variable]
   67 |                Node* adyacente = copy(n);
      |                      ^~~~~~~~~
cc1: all warnings being treated as errors
Compilation failed
9f72b9b
Fri 17 May 2024 11:36:23 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
 tests:  0|5
total_score: 0/70
ee797a4
Fri 17 May 2024 11:38:37 PM UTC: 
 sudoku.c | 1 +
 1 file changed, 1 insertion(+)
In file included from test.c:5:
sudoku.c: In function ‘get_adj_nodes’:
sudoku.c:65:38: error: statement with no effect [-Werror=unused-value]
   65 |             n -> sudo[fila][columna] == num;
      |             ~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~
cc1: all warnings being treated as errors
Compilation failed
2b51765
Fri 17 May 2024 11:38:53 PM UTC: 
 sudoku.c | 2 +-
 1 file changed, 1 insertion(+), 1 deletion(-)
 tests:  2|4
total_score: 15/70
0db9428
Fri 17 May 2024 11:48:22 PM UTC: 
 sudoku.c | 9 +++++++--
 1 file changed, 7 insertions(+), 2 deletions(-)
 tests:  2|4
total_score: 15/70
a85d648
Sat 18 May 2024 12:34:05 AM UTC: 
 sudoku.c | 9 +++++++++
 1 file changed, 9 insertions(+)
In file included from test.c:5:
sudoku.c: In function ‘is_valid’:
sudoku.c:55:14: error: unused variable ‘casilla’ [-Werror=unused-variable]
   55 |          int casilla = n -> sudo[filas][columnas];
      |              ^~~~~~~
sudoku.c:51:11: error: unused variable ‘arreglo’ [-Werror=unused-variable]
   51 |       int arreglo[10] = {0};
      |           ^~~~~~~
cc1: all warnings being treated as errors
Compilation failed
ecfdbc6
